2006-04-08  Wim Taymans  <wim@fluendo.com>

	* gst/qtdemux/qtdemux.c: (gst_qtdemux_prepare_current_sample),
	(gst_qtdemux_chain), (gst_qtdemux_add_stream), (qtdemux_dump_stsz),
	(qtdemux_dump_stco), (qtdemux_parse_trak):
	Don't make rounding errors in timestamp/duration calculations.
	Fix timestamps for AMR and IMA4.  Fixes (#337436).
	Create a dummy segment even when there is no edit list.

2006-04-07  Julien MOUTTE  <julien@moutte.net>

	* docs/plugins/gst-plugins-bad-plugins-decl-list.txt: Updates.
	* examples/directfb/Makefile.am: Add example resource files to
	dist.

2006-04-07  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* ext/amrwb/amrwb-code/Makefile.am:
	* sys/ximagesrc/ximagesrc.c: (gst_ximagesrc_recalc),
	(gst_ximagesrc_create), (gst_ximagesrc_set_property):
	Typo fix, s/XFree86/X11 and added doc blurb saying that it fixates to
	25fps

2006-04-07  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* tests/icles/ximagesrc-test.c: (main):
	Actually assert that pipeline goes to playing

2006-04-07  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* sys/ximagesrc/ximagesrc.c: (gst_ximagesrc_recalc),
	(composite_pixel), (gst_ximagesrc_ximage_get),
	(gst_ximagesrc_create), (gst_ximagesrc_set_property):
	Fix typo, C++ style comments and other small cleanups
	
2006-04-06  Wim Taymans  <wim@fluendo.com>

	* gst/qtdemux/qtdemux.c: (gst_qtdemux_init),
	(gst_qtdemux_handle_src_query), (gst_qtdemux_find_index),
	(gst_qtdemux_find_keyframe), (gst_qtdemux_find_segment),
	(gst_qtdemux_move_stream), (gst_qtdemux_perform_seek),
	(gst_qtdemux_do_seek), (gst_qtdemux_change_state),
	(gst_qtdemux_activate_segment),
	(gst_qtdemux_prepare_current_sample), (gst_qtdemux_advance_sample),
	(gst_qtdemux_loop_state_movie), (gst_qtdemux_loop),
	(qtdemux_parse_trak):
	Added full edit list support.
	Avoid overflows in prologue image detection code.
	Avoid roundoff errors in timestamp calculations.

2006-04-06  Thomas Vander Stichele  <thomas at apestaart dot org>
