@@ -36,7 +36,7 @@ G_BEGIN_DECLS
   (G_TYPE_CHECK_CLASS_CAST((klass),GST_TYPE_XINE,GstXineClass))
 #define GST_IS_XINE(obj) \
   (G_TYPE_CHECK_INSTANCE_TYPE((obj),GST_TYPE_XINE))
-#define GST_IS_XINE_CLASS(obj) \
+#define GST_IS_XINE_CLASS(klass) \
   (G_TYPE_CHECK_CLASS_TYPE((klass),GST_TYPE_XINE))
 
 typedef struct _GstXine      GstXine;
